added blog link

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                       <h5>SOFTWARE ENGINEER</h5>
                     </small></h2>
                   <div class="btn-block">
-                    <button type="button" class="btn btn-outline-dark" style="font-weight: bold;">
+                    <button type="button" class="btn btn-outline-dark" style="font-weight: bold;" onclick="window.open('https://dev.to/hamza5485', '_blank')">
                       Blog
                     </button>
                     <button id="resumeGroup" type="button" class="btn btn-outline-dark dropdown-toggle"
