removed outdated cli+gui options

--- a/index.html
+++ b/index.html
@@ -161,17 +161,9 @@
                     <button type="button" class="btn btn-outline-dark" style="font-weight: bold;" onclick="window.open('https://dev.to/hamza5485', '_blank')">
                       Blog
                     </button>
-                    <button id="resumeGroup" type="button" class="btn btn-outline-dark dropdown-toggle"
-                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-weight: bold;">
+                    <button type="button" class="btn btn-outline-dark" style="font-weight: bold;" onclick="window.open('https://docs.google.com/document/d/1FfAj1QeirenvTGoHcAnH6Ncwa765CQDaMzOseSEarAI/edit?usp=sharing', '_blank')">
                       Resume
                     </button>
-                    <div class="dropdown-menu" aria-labelledby="resumeGroup">
-                      <a class="dropdown-item" href="./resume" target="_blank">GUI</a>
-                      <a class="dropdown-item" href="./terminal" target="_blank">CLI</a>
-                      <a class="dropdown-item"
-                        href="https://docs.google.com/document/d/1FfAj1QeirenvTGoHcAnH6Ncwa765CQDaMzOseSEarAI/edit?usp=sharing"
-                        target="_blank">DOC</a>
-                    </div>
                   </div>
                   <div class="icon-block">
                     <a href="https://www.linkedin.com/in/hamzaanas/" target="_blank">
