--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" media="print" onload="this.media='all'">
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-  <script src="https://kit.fontawesome.com/46a876ab0b.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/19708c800f.js" crossorigin="anonymous"></script>
   <style>
     body,
     html {
@@ -58,7 +58,6 @@
       width: 50%;
       opacity: 1;
       margin: 1em 0;
-      border: 1px solid #212529;
       padding: .35em;
     }
 
@@ -77,7 +76,7 @@
 
     .profile i {
       font-size: 1.5em;
-      border-radius: 1em;
+      border-radius: 0.25rem;
       margin: .2em;
       padding: .3em;
       transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
